# flowgentic_benchmarking

./: pyproject.toml
benchmark/: .gitignore  Makefile  config.yml  pyproject.toml  submit_delta.sh
benchmark/data_generation/: run_experiments.py
benchmark/data_generation/experiments/backend_comparison/: main.py
benchmark/data_generation/experiments/backend_comparison/utils/: plots.py
benchmark/data_generation/experiments/base/: base_experiment.py
benchmark/data_generation/experiments/synthethic_adaptive/: main.py
benchmark/data_generation/experiments/synthethic_adaptive/utils/: plots.py
benchmark/data_generation/experiments/throughput_saturation/: main.py
benchmark/data_generation/experiments/throughput_saturation/utils/: plots.py
benchmark/data_generation/utils/: io_utils.py  schemas.py
benchmark/data_generation/workload/: academy.py  autogen.py  langgraph.py
benchmark/data_generation/workload/utils/: engine.py
benchmark/results/debug_new_event_model_2/config/: config.yml
benchmark/results/debug_new_event_model_2/experiments/syntethic_adaptive/data/: data.json
benchmark/results/delta_debug/config/: config.yml
benchmark/results/delta_debug/experiments/syntethic_adaptive/data/: data.jsonl
benchmark/results/delta_debug/experiments/throughput_saturation/data/: data.jsonl
benchmark/results/local_debug/experiments/syntethic_adaptive/data/: data.jsonl
benchmark/results/testing_backend_comparison/config/: config.yml
benchmark/results/testing_backend_comparison/experiments/backend_comparison/data/: data.json
benchmark/scripts/delta/: config.yml  debug.sh  submit.sh
benchmark/scripts/delta/debug/batch/: debug.sh
benchmark/scripts/delta/debug/interactive/: config.yml
benchmark/utils/: slurm_patch.py
data_generation/: run_experiments.py
data_generation/utils/: io_utils.py  schemas.py
data_generation/workload/: base_workload.py
scripts/delta/: submit.sh
utils/: slurm_patch.py
(+18 files in other folders)
