[project]
name = "flowgentic-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flowgentic[langgraph,asyncflow,autogen,parsl,academy] @ git+https://github.com/stride-research/flowgentic.git@experiment/exp3-benchmarking-hotfix",
    "radical-asyncflow",
    "academy-py",
    "pyyaml",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_generation*"]

[tool.uv.sources]
academy-py = { git = "https://github.com/proxystore/academy" }
radical-asyncflow = { git = "https://github.com/radical-cybertools/radical.asyncflow.git", branch = "main" }
